--- a/index.html
+++ b/index.html
@@ -6,3 +6,22 @@
     要开始了
   </body>
 </html>
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyBKzc2WZpHdzJmSD-5dAOjjzjD81QklG8A",
+    authDomain: "codebeatme.firebaseapp.com",
+    projectId: "codebeatme",
+    storageBucket: "codebeatme.appspot.com",
+    messagingSenderId: "779181611925",
+    appId: "1:779181611925:web:ebf3f02df1c1e233b1b49c"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+</script>
