--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <script type="module">
   // Import the functions you need from the SDKs you need
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
+  import { getMessaging } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-messaging.js";
   // TODO: Add SDKs for Firebase products that you want to use
   // https://firebase.google.com/docs/web/setup#available-libraries
 
@@ -24,4 +25,5 @@
 
   // Initialize Firebase
   const app = initializeApp(firebaseConfig);
+  const messaging = getMessaging(app);
 </script>
