--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script type="module">
   // Import the functions you need from the SDKs you need
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-  import { getMessaging } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-messaging.js";
+  import { getMessaging,getToken } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-messaging.js";
   // TODO: Add SDKs for Firebase products that you want to use
   // https://firebase.google.com/docs/web/setup#available-libraries
 
@@ -26,4 +26,18 @@
   // Initialize Firebase
   const app = initializeApp(firebaseConfig);
   const messaging = getMessaging(app);
+  getToken(messaging, { vapidKey: 'BFWNthTtQRvFSTHhFj-rxibek1NIku1qn5sPEbQ_Fo1tJ5SHDn9uwndYHfvWyAz5_QtTmjInzkYgq4tyuy65nmM' }).then((currentToken) => {
+  if (currentToken) {
+    // Send the token to your server and update the UI if necessary
+    // ...
+    console.log(currentToken)
+  } else {
+    // Show permission request UI
+    console.log('No registration token available. Request permission to generate one.');
+    // ...
+  }
+}).catch((err) => {
+  console.log('An error occurred while retrieving token. ', err);
+  // ...
+});
 </script>
